@@ -25,20 +25,39 @@ sub list  {
   return $stderr;
 }
 
+sub list_array {
+  my $self  = shift;
+  my @lines = split m{\n}, $self->list || '';
+  return [
+    grep { length }
+    map  { split m{(?:\s*\d+\)\s)} } @lines[1.. $#lines]
+    ];
+}
+
 sub new   { bless {}, ref($_[0]) || $_[0]; }
 
 sub register {
     my ($class, $iperl) = @_;
     my $self = $class->new;
-    for my $name(qw{avail load unload list show}) {
+    for my $name(qw{avail load unload list list_array search show}) {
       $iperl->helper("module_$name" => sub {
           my ($ip, $ret) = (shift, -1);
-          return $ret if $name =~ /^(load|show|unload)$/ && @_ == 0;
+          return $ret if $name =~ /^(load|search|show|unload)$/ && @_ == 0;
           my $cb = $self->can($name);
+          return $ret unless $cb;
           return $self->$cb(@_);
       });
     }
     return 1;
+}
+
+sub search {
+  my ($self, $query) = @_;
+  my $regex = ref($query) eq 'Regexp' ? $query : qr{\Q$query\E};
+  my $hits  =
+    join $/ => sort { lc($a) cmp lc($b) }
+      grep { m/$regex/ } split m{(?:$/|\s+)}, $self->avail || '';
+  return $hits || 'no match';
 }
 
 sub show {
@@ -131,17 +150,32 @@ Called by C<<< IPerl->load_plugin('EnvironmentModules') >>>.
 
 Display a list of environment modules that are available.
 
+=head2 module_list
+
+  IPerl->module_list;
+
+Display the list of environment modules that are loaded.
+
+=head2 module_list_array
+
+  my $loaded = IPerl->module_list_array;
+
+Return an array reference to the list of loaded modules as returned by
+L</"module_list">.
+
 =head2 module_load
 
   IPerl->module_load('gcc');
 
 Load a list of environment modules.
 
-=head2 module_list
+=head2 module_search
 
-  IPerl->module_list;
+  IPerl->module_search(qr/gcc/);
+  IPerl->module_search('gcc');
 
-Display the list of environment modules that are loaded.
+Display a list of matching modules. The query can either be a regular expression
+or a literal string.
 
 =head2 module_show
 
@@ -166,13 +200,6 @@ Not for end user consumption.
 
 A more longwinded C<<< IPerl->module_avail; >>>.
 
-=head2 load
-
-  my $p = Devel::IPerl::Plugin::EnvironmentModules->new();
-  $p->load('gcc');
-
-A more longwinded C<<< IPerl->module_load; >>>.
-
 =head2 list
 
   my $p = Devel::IPerl::Plugin::EnvironmentModules->new();
@@ -180,11 +207,31 @@ A more longwinded C<<< IPerl->module_load; >>>.
 
 A more longwinded C<<< IPerl->module_list; >>>.
 
+=head2 list_array
+
+  my $p = Devel::IPerl::Plugin::EnvironmentModules->new();
+  $p->list_array();
+
+A more longwinded C<<< IPerl->module_list_array; >>>.
+
+=head2 load
+
+  my $p = Devel::IPerl::Plugin::EnvironmentModules->new();
+  $p->load('gcc');
+
+A more longwinded C<<< IPerl->module_load; >>>.
+
 =head2 new
 
   my $p = Devel::IPerl::Plugin::EnvironmentModules->new();
 
 Create a new instance.
+
+=head2 search
+
+  my $p = Devel::IPerl::Plugin::EnvironmentModules->new();
+  $p->search(qr/gcc/);
+  $p->search('gcc');
 
 =head2 show
 
